# paid-ad-campaign-optimizer-agent-skill

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml  requirements.txt
paid_ad_optimizer/: __init__.py  audience.py  benchmarks.py  compliance.py  funnel.py  knowledge.py  models.py  pipeline.py  roadmap.py  scoring.py  significance.py
skills/: main.md  sub-audience-analysis.md  sub-compliance-check.md  sub-improvement-roadmap.md  sub-scoring-engine.md
tests/: conftest.py  test-scenarios.md  test_audience.py  test_compliance.py  test_funnel.py  test_knowledge.py  test_models.py  test_roadmap.py  test_scenarios.py  test_scoring.py  test_significance.py
tools/: __init__.py  knowledge_sources.json  knowledge_updater.py
